# TiefDownConverter

./: Cargo.toml  README.md  build.rs
.github/: FUNDING.YML
.github/workflows/: main_push.yml  on-release-tag.yml  test.yml
cli/: Cargo.toml
cli/src/: cli.rs  cli_meta_generation_feature.rs  cli_meta_generation_format.rs  cli_nav_meta_generation_feature.rs  cli_template_type.rs  main.rs  project_commands.rs
cli/tests/: assertions.rs  convert_integration_test.rs  init_integration_test.rs  project_injections_add_files_tests.rs  project_injections_add_tests.rs  project_injections_list_tests.rs  project_injections_remove_tests.rs  project_list_templates_integration_test.rs  project_markdown_add_integration_test.rs  project_markdown_meta_list_integration_test.rs  project_markdown_meta_remove_integration_test.rs  project_markdown_meta_set_integration_test.rs  project_markdown_remove_integration_test.rs  project_markdown_resources_add_integration_test.rs  project_markdown_resources_remove_integration_test.rs  project_markdown_update_integration_test.rs  project_preprocessors_add_integration_test.rs  project_preprocessors_remove_integration_test.rs  project_processors_add_integration_test.rs  project_processors_remove_integration_test.rs  project_profiles_add_integration_test.rs  project_profiles_remove_integration_test.rs  project_shared_meta_list_integration_test.rs  project_shared_meta_remove_integration_test.rs  project_shared_meta_set_integration_test.rs  project_smart_clean_integration_test.rs  project_templates_add_integration_test.rs  project_templates_remove_integration_test.rs  project_templates_update_integration_test.rs  project_update_settings_integration_test.rs
core/: Cargo.toml  build.rs
core/src/: consts.rs  conversion.rs  conversion_decider.rs  converters.rs  file_retrieval.rs  injections.rs  lib.rs  manifest_model.rs  markdown_project_management.rs  meta_generation_feature.rs  meta_generation_format.rs  metadata_management.rs  nav_meta_generation.rs  nav_meta_generation_feature.rs  project_handle.rs  project_management.rs  template_management.rs  template_type.rs
core/src/_tests/: injections_tests.rs  manifest_model_tests.rs  mod.rs  project_management_tests.rs  template_type_tests.rs  tests_common.rs
core/src/converters/: common.rs  custom_pandoc_converter.rs  custom_preprocessor_converter.rs  custom_processor_converter.rs  epub_converter.rs  mod.rs  tex_converter.rs  typst_converter.rs
core/src/resources/: meta_writer.lua
core/src/resources/templates/default/: booklet.tex  default.tex  meta.tex  meta.typ
core/src/resources/templates/lix/: lix_chapter_filter.lua  lix_novel_a4.tex  lix_novel_book.tex  meta.tex
docs/: CNAME  index.html  manifest.toml  prim_epub.epub
docs/Markdown/: Chapter 1 - Introduction.md  Chapter 2 - Usage.md  Chapter 3 - Usage Details.md  Chapter 4 - Contributing.md
docs/cli/: Epub Documentation.epub  index.html  prim_epub.epub
docs/cli_index_markdown/: index.md
docs/cli_markdown/: Chapter 1 - Introduction.md  Chapter 2 - Usage.md  Chapter 4 - Contributing.md
docs/index_markdown/: Chapter 1.md  index.md
docs/lib/: Epub Documentation.epub  index.html  prim_epub.epub
docs/lib_index_markdown/: index.md
docs/lib_markdown/: 1 - Introduction.md  10 - Multi-file Output Model.md  11 - Metadata Generation and Injection.md  12 - Smart Clean.md  2 - Project Model Overview.md  3 - Project Structure and Directories.md  4 - Manifest.md  5 - Conversion Pipeline.md  6 - Templates.md  7 - Lua Filters.md  8 - Markdown Projects.md  9 - Injections.md  Chapter 1 - Introduction.md  Chapter 10 - Shared Metadata.md  Chapter 11 - Metadata Settings.md  TODO.md  (+11 more)
planning/: .gitignore  PROMPT.md  manifest.toml
src/: cli.rs  consts.rs  conversion.rs  conversion_decider.rs  converters.rs  lib.rs  main.rs  manifest_model.rs  markdown_project_management.rs  metadata_management.rs  project_management.rs  template_management.rs  template_type.rs
tests/: assertions.rs  check_dependencies_integration_test.rs  convert_integration_test.rs  init_integration_test.rs  project_add_preprocessor_integration_test.rs  project_add_profile_integration_test.rs  project_add_template_integration_test.rs  project_list_templates_integration_test.rs  project_manage_metadata_list_integration_test.rs  project_manage_metadata_remove_integration_test.rs  project_manage_metadata_set_integration_test.rs  project_markdown_add_integration_test.rs  project_markdown_meta_remove_integration_test.rs  project_processors_remove_integration_test.rs  project_profiles_add_integration_test.rs  project_profiles_remove_integration_test.rs  project_remove_preprocessor_integration_test.rs  project_remove_profile_integration_test.rs  project_remove_template_integration_test.rs  project_shared_meta_list_integration_test.rs  project_shared_meta_remove_integration_test.rs  project_smart_clean_integration_test.rs  project_templates_update_integration_test.rs  project_update_manifest_integration_test.rs  project_update_template_integration_test.rs
tiefdown-project-support/: CHANGELOG.md  README.md  package.json
tools/: generate-line-graphs.sh  generate_docs.py  line_graph.gnuplot
(+427 files in other folders)
