[workspace]
resolver = "3"
members = ["core", "cli"]

[workspace.package]
version = "0.10.0"
authors = ["Lena Tauchner <tiefseetauchner@lukechriswalker.at>"]
edition = "2024"
repository = "https://github.com/Tiefseetauchner/tiefdownconverter"
homepage = "https://tiefseetauchner.github.io/TiefDownConverter/"
documentation = "https://github.com/Tiefseetauchner/TiefDownConverter/blob/main/docs/docs.pdf"
readme = "README.md"
license = "MIT"
